# remodel-milestones

./: .gitignore  CHANGELOG.md  README.md  cabal.project  milestones.cabal
app/: Main.hs
scripts/: 0-initializeContract.sh  1-contractorStartProject.sh  2-homeownerFirstDeposit.sh  3-contractorWithdrawPermit.sh  4-homeownerDepositBalance.sh  5-contractorWithdrawDrywall.sh  6-contractorWithdrawRough.sh  7-contractorWithdrawDrywallAgain.sh  8a-contractorWithdrawFinal.sh  8b-homeownerWithdrawProjectFail.sh  balance.sh  currentSlot.sh  env.sh  helpers.sh  initializeContract.sh  mintClosedFromScript.sh  mintDrywallFromScript.sh  mintFinalFromScript.sh  mintInspectorNFT.sh  mintMilestonesAuthNFT.sh  mintMilestonesNFT.sh  mintPermitFromScript.sh  mintRoughFromScript.sh
src/Inspector/: Deploy.hs  Mint.hs
src/Inspector/Deploy/: Mint.plutus  policyID
src/Milestones/: DeployAdditional_1_ContractorStartProject.hs  DeployAdditional_2_HomeownerDeposit.hs  DeployAdditional_3_ContractorFirstWithdraw.hs  DeployAdditional_4_HomeownerDepositBalance.hs  DeployAdditional_5_ContractorWithdrawDrywall.hs  DeployAdditional_6_ContractorWithdrawRough.hs  DeployAdditional_7_ContractorWithdrawDrywallAgain.hs  DeployAdditional_8a_ContractorWithdrawFinal.hs  DeployAdditional_8b_HomeownerWithdrawProjectFailed.hs  DeployNFT.hs  DeployOnChain.hs  Mint.hs  OnChain.hs
src/Milestones/Deploy/: 0-parameterized-initial-datum.json  1-deploy-contractor-start-project-datum.json  2-deploy-homeowner-deposit-datum.json  3-deploy-contractor-first-withdraw-datum.json  4-deploy-homeowner-deposit-balance-datum.json  5-deploy-contractor-withdraw-drywall.json  6-deploy-contractor-withdraw-rough.json  7-deploy-contractor-withdraw-drywall.json  8a-deploy-contractor-withdraw-final.json  8b-deploy-homeowner-withdraw-project-failed.json  parameterized-initial-datum.json  redeemer-contractor-drywall-payment.json  redeemer-contractor-final-payment.json  redeemer-contractor-permit-payment.json  redeemer-contractor-rough-payment.json  redeemer-contractor-start-project.json
